# midnight-hex-notebook

./: .env.example  .gitignore  CHANGELOG.md  GenSpecialJunkPacket.py  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  refresh-data.yml
src/: __init__.py
src/config/: __init__.py  validator.py
src/core/crypto/: __init__.py  csprng.py
src/core/packets/: __init__.py  generator.py
src/core/protocol/: __init__.py  config.py
src/utils/: logger.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_csprng.py  test_packets.py  test_validator.py  test_web_dom.py
web/: I-list1.json  index.html
